# org-google-docs

./: .gitignore  CLAUDE.md  HOWTO.org  org-gdocs-mode.el  org-gdocs-sync-plan.md  pyproject.toml  test-doc.org
.claude/: settings.local.json
docs/plans/: 2026-01-12-babel-image-rendering-design.md  2026-01-12-babel-image-rendering.md
org_gdocs_sync/: __init__.py  __main__.py  auth.py  babel.py  cli.py  models.py  output.py
org_gdocs_sync/convert/: __init__.py  gdocs_to_org.py  org_to_gdocs.py
org_gdocs_sync/gdocs/: __init__.py  client.py
org_gdocs_sync/org/: __init__.py  parser.py  writer.py
org_gdocs_sync/sync/: __init__.py  engine.py  pull.py  push.py
tests/: __init__.py  test_babel.py  test_client.py  test_converter.py  test_models.py  test_output.py  test_parser.py  test_push.py
tests/fixtures/: sample.org
